2024-11-14  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Authors@R): Added

2024-07-20  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Switch some URLs from http to https

2024-05-24  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Use tinyverse.netlify.app for dependency badge

2024-04-23  Dirk Eddelbuettel  <edd@debian.org>

	* .github/workflows/ci.yaml (jobs): Update to actions/checkout@v4,
	add r-ci-setup actions

2022-12-01  Dirk Eddelbuettel  <edd@debian.org>

	* .github/workflows/ci.yaml (jobs): Update to actions/checkout@v3

2021-12-27  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Remove unused continuous integration artifact and badge

2021-05-28  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (URL): Add URL to DESCRIPTION

2021-01-17  Dirk Eddelbuettel  <edd@debian.org>

        * .github/workflows/ci.yaml: Add CI runner using r-ci
	* README.md: Add new badge

2020-05-03  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Add 'dependencies' badge

2020-04-17  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Add 'last commit' badge

2017-08-26  Dirk Eddelbuettel  <edd@debian.org>

	* .travis.yml (before_install): Use https for curl fetch

2016-08-03  Dirk Eddelbuettel  <edd@debian.org>

	* R/rmsfact.R (rmsfact): Support ind argument
	(.read.rms): Support encoding

	* .travis.yml: Rewritten for run.sh from forked r-travis

2016-05-16  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Version 0.0.2

	* R/rmsfact.R (.read.rms): Skip lines starting with '##'

	* inst/rmsfact/rmsfact.txt: Replaced / with ' as delimiter

	* inst/NEWS.Rd: Added

2016-05-15  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: First CRAN upload of finalised version 0.0.1

	* R/rmsfact.R: Added @seealso and @examples; the print method now
	uses strwrap

	* README.md: Expanded
	* .travis.yml: Added

	* inst/rmsfact/rmsfact.txt: Added copyright notice and link to source

2016-05-14  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: First version